--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "description": "This is backend of Application",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon ./src/index.server.js",
+    "start": "node ./src/index.server.js",
+    "dev": "nodemon ./src/index.server.js",
     "servers": "concurrently \"npm run start\" \"cd ../icici-fe-code && npm run start\""
   },
   "author": "",
@@ -39,8 +40,7 @@
     "nodemailer-express-handlebars": "^4.0.0",
     "path": "^0.12.7",
     "request": "^2.88.2",
-    "request-promise": "^4.2.6",
-    "slugify": "^1.5.3"
+    "request-promise": "^4.2.6"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
